--- a/components/operators/nfd/instance/base/node-feature-discovery.yaml
+++ b/components/operators/nfd/instance/base/node-feature-discovery.yaml
@@ -15,7 +15,7 @@ spec:
   operand:
     # bug: an image has to be defined otherwise the deployment fails
     # bug: this behavior recently changed
-    image: registry.redhat.io/openshift4/ose-node-feature-discovery-rhel9:latest
+    image: registry.redhat.io/openshift4/ose-node-feature-discovery-rhel9:v4.16
     servicePort: 12000
   workerConfig:
     configData: |
